--- a/ML_Case-Based-2.ipynb
+++ b/ML_Case-Based-2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOrfuWfHp4uleGE4EPRX8bg",
+      "authorship_tag": "ABX9TyOUXXO0bgcoMSCtE+UHp4rA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "ndE78k2_MDV-"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import seaborn as sns\n",
+        "import matplotlib.pyplot as plt\n",
+        "import warnings \n",
+        "warnings.filterwarnings('ignore')"
+      ]
     }
   ]
 }
