--- a/ML_Case-Based-2.ipynb
+++ b/ML_Case-Based-2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOUXXO0bgcoMSCtE+UHp4rA",
+      "authorship_tag": "ABX9TyPmM/kpO+EEDREwAnjERzIL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,6 +40,394 @@
         "import matplotlib.pyplot as plt\n",
         "import warnings \n",
         "warnings.filterwarnings('ignore')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Read Data\n",
+        "df = pd.read_csv('https://raw.githubusercontent.com/AlsT26/ML_Case-Based-2/main/Country-data.csv')\n",
+        "df"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 423
+        },
+        "id": "FCYqqndu1aT4",
+        "outputId": "eda5551c-4ff2-465f-c624-36ef4a26d3b4"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "                 country  child_mort  exports  health  imports  income  \\\n",
+              "0            Afghanistan        90.2     10.0    7.58     44.9    1610   \n",
+              "1                Albania        16.6     28.0    6.55     48.6    9930   \n",
+              "2                Algeria        27.3     38.4    4.17     31.4   12900   \n",
+              "3                 Angola       119.0     62.3    2.85     42.9    5900   \n",
+              "4    Antigua and Barbuda        10.3     45.5    6.03     58.9   19100   \n",
+              "..                   ...         ...      ...     ...      ...     ...   \n",
+              "162              Vanuatu        29.2     46.6    5.25     52.7    2950   \n",
+              "163            Venezuela        17.1     28.5    4.91     17.6   16500   \n",
+              "164              Vietnam        23.3     72.0    6.84     80.2    4490   \n",
+              "165                Yemen        56.3     30.0    5.18     34.4    4480   \n",
+              "166               Zambia        83.1     37.0    5.89     30.9    3280   \n",
+              "\n",
+              "     inflation  life_expec  total_fer   gdpp  \n",
+              "0         9.44        56.2       5.82    553  \n",
+              "1         4.49        76.3       1.65   4090  \n",
+              "2        16.10        76.5       2.89   4460  \n",
+              "3        22.40        60.1       6.16   3530  \n",
+              "4         1.44        76.8       2.13  12200  \n",
+              "..         ...         ...        ...    ...  \n",
+              "162       2.62        63.0       3.50   2970  \n",
+              "163      45.90        75.4       2.47  13500  \n",
+              "164      12.10        73.1       1.95   1310  \n",
+              "165      23.60        67.5       4.67   1310  \n",
+              "166      14.00        52.0       5.40   1460  \n",
+              "\n",
+              "[167 rows x 10 columns]"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-d9cb59f5-8fd3-43f4-adc8-5b841bccb5f4\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>country</th>\n",
+              "      <th>child_mort</th>\n",
+              "      <th>exports</th>\n",
+              "      <th>health</th>\n",
+              "      <th>imports</th>\n",
+              "      <th>income</th>\n",
+              "      <th>inflation</th>\n",
+              "      <th>life_expec</th>\n",
+              "      <th>total_fer</th>\n",
+              "      <th>gdpp</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Afghanistan</td>\n",
+              "      <td>90.2</td>\n",
+              "      <td>10.0</td>\n",
+              "      <td>7.58</td>\n",
+              "      <td>44.9</td>\n",
+              "      <td>1610</td>\n",
+              "      <td>9.44</td>\n",
+              "      <td>56.2</td>\n",
+              "      <td>5.82</td>\n",
+              "      <td>553</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Albania</td>\n",
+              "      <td>16.6</td>\n",
+              "      <td>28.0</td>\n",
+              "      <td>6.55</td>\n",
+              "      <td>48.6</td>\n",
+              "      <td>9930</td>\n",
+              "      <td>4.49</td>\n",
+              "      <td>76.3</td>\n",
+              "      <td>1.65</td>\n",
+              "      <td>4090</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Algeria</td>\n",
+              "      <td>27.3</td>\n",
+              "      <td>38.4</td>\n",
+              "      <td>4.17</td>\n",
+              "      <td>31.4</td>\n",
+              "      <td>12900</td>\n",
+              "      <td>16.10</td>\n",
+              "      <td>76.5</td>\n",
+              "      <td>2.89</td>\n",
+              "      <td>4460</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Angola</td>\n",
+              "      <td>119.0</td>\n",
+              "      <td>62.3</td>\n",
+              "      <td>2.85</td>\n",
+              "      <td>42.9</td>\n",
+              "      <td>5900</td>\n",
+              "      <td>22.40</td>\n",
+              "      <td>60.1</td>\n",
+              "      <td>6.16</td>\n",
+              "      <td>3530</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Antigua and Barbuda</td>\n",
+              "      <td>10.3</td>\n",
+              "      <td>45.5</td>\n",
+              "      <td>6.03</td>\n",
+              "      <td>58.9</td>\n",
+              "      <td>19100</td>\n",
+              "      <td>1.44</td>\n",
+              "      <td>76.8</td>\n",
+              "      <td>2.13</td>\n",
+              "      <td>12200</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>162</th>\n",
+              "      <td>Vanuatu</td>\n",
+              "      <td>29.2</td>\n",
+              "      <td>46.6</td>\n",
+              "      <td>5.25</td>\n",
+              "      <td>52.7</td>\n",
+              "      <td>2950</td>\n",
+              "      <td>2.62</td>\n",
+              "      <td>63.0</td>\n",
+              "      <td>3.50</td>\n",
+              "      <td>2970</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>163</th>\n",
+              "      <td>Venezuela</td>\n",
+              "      <td>17.1</td>\n",
+              "      <td>28.5</td>\n",
+              "      <td>4.91</td>\n",
+              "      <td>17.6</td>\n",
+              "      <td>16500</td>\n",
+              "      <td>45.90</td>\n",
+              "      <td>75.4</td>\n",
+              "      <td>2.47</td>\n",
+              "      <td>13500</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>164</th>\n",
+              "      <td>Vietnam</td>\n",
+              "      <td>23.3</td>\n",
+              "      <td>72.0</td>\n",
+              "      <td>6.84</td>\n",
+              "      <td>80.2</td>\n",
+              "      <td>4490</td>\n",
+              "      <td>12.10</td>\n",
+              "      <td>73.1</td>\n",
+              "      <td>1.95</td>\n",
+              "      <td>1310</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>165</th>\n",
+              "      <td>Yemen</td>\n",
+              "      <td>56.3</td>\n",
+              "      <td>30.0</td>\n",
+              "      <td>5.18</td>\n",
+              "      <td>34.4</td>\n",
+              "      <td>4480</td>\n",
+              "      <td>23.60</td>\n",
+              "      <td>67.5</td>\n",
+              "      <td>4.67</td>\n",
+              "      <td>1310</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>166</th>\n",
+              "      <td>Zambia</td>\n",
+              "      <td>83.1</td>\n",
+              "      <td>37.0</td>\n",
+              "      <td>5.89</td>\n",
+              "      <td>30.9</td>\n",
+              "      <td>3280</td>\n",
+              "      <td>14.00</td>\n",
+              "      <td>52.0</td>\n",
+              "      <td>5.40</td>\n",
+              "      <td>1460</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>167 rows × 10 columns</p>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d9cb59f5-8fd3-43f4-adc8-5b841bccb5f4')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-d9cb59f5-8fd3-43f4-adc8-5b841bccb5f4 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-d9cb59f5-8fd3-43f4-adc8-5b841bccb5f4');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Exploratory Data Analysis"
+      ],
+      "metadata": {
+        "id": "wVBhH15Y2QDQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mYfDrXHg2aMo",
+        "outputId": "3677c052-2a1a-480e-c6bb-0be76c0efda7"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(167, 10)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8xmQFhtl3Yah",
+        "outputId": "d7e4806b-790d-406a-f521-0fff514c150a"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 167 entries, 0 to 166\n",
+            "Data columns (total 10 columns):\n",
+            " #   Column      Non-Null Count  Dtype  \n",
+            "---  ------      --------------  -----  \n",
+            " 0   country     167 non-null    object \n",
+            " 1   child_mort  167 non-null    float64\n",
+            " 2   exports     167 non-null    float64\n",
+            " 3   health      167 non-null    float64\n",
+            " 4   imports     167 non-null    float64\n",
+            " 5   income      167 non-null    int64  \n",
+            " 6   inflation   167 non-null    float64\n",
+            " 7   life_expec  167 non-null    float64\n",
+            " 8   total_fer   167 non-null    float64\n",
+            " 9   gdpp        167 non-null    int64  \n",
+            "dtypes: float64(7), int64(2), object(1)\n",
+            "memory usage: 13.2+ KB\n"
+          ]
+        }
       ]
     }
   ]
