--- a/ML_Case-Based-2.ipynb
+++ b/ML_Case-Based-2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOAKmtCDVapjHinjHTorucT",
+      "authorship_tag": "ABX9TyO+AqUIidzcoYTGEW2Nsv43",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1139,12 +1139,12 @@
         "df_new.head()"
       ],
       "metadata": {
-        "id": "egLAeiG_CV3e",
-        "outputId": "c4f497e6-e60a-486a-fedd-5df327de0d39",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "egLAeiG_CV3e",
+        "outputId": "c4f497e6-e60a-486a-fedd-5df327de0d39"
       },
       "execution_count": 32,
       "outputs": [
@@ -1384,12 +1384,12 @@
         "centroids"
       ],
       "metadata": {
-        "id": "60mnvizaFBXA",
-        "outputId": "33733cae-b80a-4bd0-8db3-4a15122a89f9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 331
-        }
+        },
+        "id": "60mnvizaFBXA",
+        "outputId": "33733cae-b80a-4bd0-8db3-4a15122a89f9"
       },
       "execution_count": 45,
       "outputs": [
@@ -1662,321 +1662,102 @@
       "source": [
         "#menggunakan rumus eucladian\n",
         "\n",
-        "jarak = centroids.apply(lambda x: np.sqrt(((df_new - x) ** 2).sum(axis=1)))"
+        "#fungsi untuk mengurangi nilai dari tiap kolom dengan nilai  centroid dan mengambil nilai akar pangkat 2 nya\n",
+        "def labeling(df, centroid):\n",
+        "  jarak = centroids.apply(lambda x: np.sqrt(((df_new - x) ** 2).sum(axis=1)))\n",
+        "  #return hasil pencarian nilai minimum di tiap jaraknya dan melabel cluster centroid masing-masing datanya berdasarkan nilai minimumnya\n",
+        "  return jarak.idxmin(axis=1)"
       ],
       "metadata": {
         "id": "eWfiXW8jFS7L"
       },
-      "execution_count": 48,
+      "execution_count": 57,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "jarak"
+        "label = labeling(df_new, centroids)\n",
+        "label"
       ],
       "metadata": {
-        "id": "d6TyHmoaGbTB",
-        "outputId": "4e87fec1-249b-49e5-de6c-bd9bde8ac126",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 423
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d6TyHmoaGbTB",
+        "outputId": "d1bb88b7-5c08-4eea-95ab-e6bbe8f8468e"
       },
-      "execution_count": 47,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "            0         1         2         3         4         5         6  \\\n",
-              "0    8.047130  6.274250  5.615600  5.794606  8.652105  4.774134  8.343032   \n",
-              "1    3.343506  8.148539  3.580644  4.440220  1.874481  6.216539  2.815979   \n",
-              "2    4.035996  6.454296  3.115640  3.573098  2.838652  4.953990  4.463744   \n",
-              "3    8.887007  4.692072  6.717699  6.272008  9.163885  6.007843  9.719408   \n",
-              "4    3.504584  8.138951  3.230440  4.004130  2.265257  5.768054  2.547427   \n",
-              "..        ...       ...       ...       ...       ...       ...       ...   \n",
-              "162  3.685857  7.094276  1.232572  2.343558  4.241747  4.316628  4.785627   \n",
-              "163  5.151581  6.857073  5.122907  4.213525  4.664497  6.486457  5.575097   \n",
-              "164  4.022763  7.943274  3.460859  3.738788  3.067990  6.321949  3.366988   \n",
-              "165  5.944261  5.063909  3.553411  3.535235  5.860432  3.624987  6.441829   \n",
-              "166  7.277059  5.908425  5.175677  4.942875  8.244427  4.942292  8.258414   \n",
-              "\n",
-              "            7         8  \n",
-              "0    9.644688  7.431125  \n",
-              "1    4.424159  5.397715  \n",
-              "2    5.234713  5.650091  \n",
-              "3    9.865420  8.542152  \n",
-              "4    3.565172  5.589800  \n",
-              "..        ...       ...  \n",
-              "162  5.552535  4.305326  \n",
-              "163  6.267732  6.340321  \n",
-              "164  3.740870  5.876029  \n",
-              "165  7.337965  6.258716  \n",
-              "166  9.366404  6.466159  \n",
-              "\n",
-              "[167 rows x 9 columns]"
-            ],
-            "text/html": [
-              "\n",
-              "  <div id=\"df-82cd9a60-8e79-4bc4-8147-6e4ea48c3085\">\n",
-              "    <div class=\"colab-df-container\">\n",
-              "      <div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>0</th>\n",
-              "      <th>1</th>\n",
-              "      <th>2</th>\n",
-              "      <th>3</th>\n",
-              "      <th>4</th>\n",
-              "      <th>5</th>\n",
-              "      <th>6</th>\n",
-              "      <th>7</th>\n",
-              "      <th>8</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>8.047130</td>\n",
-              "      <td>6.274250</td>\n",
-              "      <td>5.615600</td>\n",
-              "      <td>5.794606</td>\n",
-              "      <td>8.652105</td>\n",
-              "      <td>4.774134</td>\n",
-              "      <td>8.343032</td>\n",
-              "      <td>9.644688</td>\n",
-              "      <td>7.431125</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>3.343506</td>\n",
-              "      <td>8.148539</td>\n",
-              "      <td>3.580644</td>\n",
-              "      <td>4.440220</td>\n",
-              "      <td>1.874481</td>\n",
-              "      <td>6.216539</td>\n",
-              "      <td>2.815979</td>\n",
-              "      <td>4.424159</td>\n",
-              "      <td>5.397715</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>4.035996</td>\n",
-              "      <td>6.454296</td>\n",
-              "      <td>3.115640</td>\n",
-              "      <td>3.573098</td>\n",
-              "      <td>2.838652</td>\n",
-              "      <td>4.953990</td>\n",
-              "      <td>4.463744</td>\n",
-              "      <td>5.234713</td>\n",
-              "      <td>5.650091</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>8.887007</td>\n",
-              "      <td>4.692072</td>\n",
-              "      <td>6.717699</td>\n",
-              "      <td>6.272008</td>\n",
-              "      <td>9.163885</td>\n",
-              "      <td>6.007843</td>\n",
-              "      <td>9.719408</td>\n",
-              "      <td>9.865420</td>\n",
-              "      <td>8.542152</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>3.504584</td>\n",
-              "      <td>8.138951</td>\n",
-              "      <td>3.230440</td>\n",
-              "      <td>4.004130</td>\n",
-              "      <td>2.265257</td>\n",
-              "      <td>5.768054</td>\n",
-              "      <td>2.547427</td>\n",
-              "      <td>3.565172</td>\n",
-              "      <td>5.589800</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>162</th>\n",
-              "      <td>3.685857</td>\n",
-              "      <td>7.094276</td>\n",
-              "      <td>1.232572</td>\n",
-              "      <td>2.343558</td>\n",
-              "      <td>4.241747</td>\n",
-              "      <td>4.316628</td>\n",
-              "      <td>4.785627</td>\n",
-              "      <td>5.552535</td>\n",
-              "      <td>4.305326</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>163</th>\n",
-              "      <td>5.151581</td>\n",
-              "      <td>6.857073</td>\n",
-              "      <td>5.122907</td>\n",
-              "      <td>4.213525</td>\n",
-              "      <td>4.664497</td>\n",
-              "      <td>6.486457</td>\n",
-              "      <td>5.575097</td>\n",
-              "      <td>6.267732</td>\n",
-              "      <td>6.340321</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>164</th>\n",
-              "      <td>4.022763</td>\n",
-              "      <td>7.943274</td>\n",
-              "      <td>3.460859</td>\n",
-              "      <td>3.738788</td>\n",
-              "      <td>3.067990</td>\n",
-              "      <td>6.321949</td>\n",
-              "      <td>3.366988</td>\n",
-              "      <td>3.740870</td>\n",
-              "      <td>5.876029</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>165</th>\n",
-              "      <td>5.944261</td>\n",
-              "      <td>5.063909</td>\n",
-              "      <td>3.553411</td>\n",
-              "      <td>3.535235</td>\n",
-              "      <td>5.860432</td>\n",
-              "      <td>3.624987</td>\n",
-              "      <td>6.441829</td>\n",
-              "      <td>7.337965</td>\n",
-              "      <td>6.258716</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>166</th>\n",
-              "      <td>7.277059</td>\n",
-              "      <td>5.908425</td>\n",
-              "      <td>5.175677</td>\n",
-              "      <td>4.942875</td>\n",
-              "      <td>8.244427</td>\n",
-              "      <td>4.942292</td>\n",
-              "      <td>8.258414</td>\n",
-              "      <td>9.366404</td>\n",
-              "      <td>6.466159</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>167 rows × 9 columns</p>\n",
-              "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-82cd9a60-8e79-4bc4-8147-6e4ea48c3085')\"\n",
-              "              title=\"Convert this dataframe to an interactive table.\"\n",
-              "              style=\"display:none;\">\n",
-              "        \n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "       width=\"24px\">\n",
-              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-              "  </svg>\n",
-              "      </button>\n",
-              "      \n",
-              "  <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      flex-wrap:wrap;\n",
-              "      gap: 12px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "      <script>\n",
-              "        const buttonEl =\n",
-              "          document.querySelector('#df-82cd9a60-8e79-4bc4-8147-6e4ea48c3085 button.colab-df-convert');\n",
-              "        buttonEl.style.display =\n",
-              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-82cd9a60-8e79-4bc4-8147-6e4ea48c3085');\n",
-              "          const dataTable =\n",
-              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                     [key], {});\n",
-              "          if (!dataTable) return;\n",
-              "\n",
-              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "            + ' to learn more about interactive tables.';\n",
-              "          element.innerHTML = '';\n",
-              "          dataTable['output_type'] = 'display_data';\n",
-              "          await google.colab.output.renderOutput(dataTable, element);\n",
-              "          const docLink = document.createElement('div');\n",
-              "          docLink.innerHTML = docLinkHtml;\n",
-              "          element.appendChild(docLink);\n",
-              "        }\n",
-              "      </script>\n",
-              "    </div>\n",
-              "  </div>\n",
-              "  "
+              "0      5\n",
+              "1      4\n",
+              "2      4\n",
+              "3      1\n",
+              "4      4\n",
+              "      ..\n",
+              "162    2\n",
+              "163    3\n",
+              "164    4\n",
+              "165    3\n",
+              "166    5\n",
+              "Length: 167, dtype: int64"
             ]
           },
           "metadata": {},
-          "execution_count": 47
+          "execution_count": 60
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "label.value_counts()"
+      ],
       "metadata": {
-        "id": "rSCsnY_ZGzA0"
+        "id": "VKHoDbndMI8S",
+        "outputId": "3ffa4053-d695-4c5f-c626-ccd2da740cb6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6    53\n",
+              "2    32\n",
+              "4    30\n",
+              "5    20\n",
+              "1    11\n",
+              "3    11\n",
+              "7     5\n",
+              "0     4\n",
+              "8     1\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 64
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Mencari nilai mean dari tiap baris cluster atau tiap centroid di clusternya masing-masing untuk dijadikan centroid baru\n",
+        "def new_centroid(df, label, k):\n",
+        "  df_new.groupby(label).apply(lambda x: np.exp(np.log(x).mean())).transpose()"
+      ],
+      "metadata": {
+        "id": "_7J3gIMIMR3A"
+      },
+      "execution_count": 67,
       "outputs": []
     }
   ]
