--- a/ML_Case-Based-2.ipynb
+++ b/ML_Case-Based-2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO+AqUIidzcoYTGEW2Nsv43",
+      "authorship_tag": "ABX9TyOgOiGlbd9fVYD3/I2rJjom",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 69,
       "metadata": {
         "id": "ndE78k2_MDV-"
       },
@@ -37,7 +37,11 @@
         "import numpy as np\n",
         "import pandas as pd\n",
         "import seaborn as sns\n",
+        "\n",
+        "#visualisasi data\n",
         "import matplotlib.pyplot as plt\n",
+        "from sklearn.decomposition import PCA\n",
+        "from IPython.display import clear_output\n",
         "import warnings \n",
         "warnings.filterwarnings('ignore')"
       ]
@@ -1718,11 +1722,11 @@
         "label.value_counts()"
       ],
       "metadata": {
-        "id": "VKHoDbndMI8S",
-        "outputId": "3ffa4053-d695-4c5f-c626-ccd2da740cb6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "VKHoDbndMI8S",
+        "outputId": "3ffa4053-d695-4c5f-c626-ccd2da740cb6"
       },
       "execution_count": 64,
       "outputs": [
